# pumpfun-bonkfun-bot

./: .env.example  .env.example.safe  .env.swp  .gitignore  .pre-commit-config.yaml  AGENTS.md  BONK_FIX_README.md  BOT_COMMANDS.md  CLAUDE.md  CRITICAL_FIXES_FINAL.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.txt  FINAL_DEPLOYMENT_CHECKLIST.md  KNOWN_ISSUES.md  LICENSE  OPTIMIZATION.md  README.md  README_TEMPLATE.md  READY_TO_DEPLOY.txt  RPC_MANAGER_README.md  SESSION_010_LOG.md  SESSION_012_LOG.md  START_BOT_CHECKLIST.sh  add_token.sh  aliases.local.sh  aliases.sh  analyze_whale_trades.py  analyze_whales_24h.py  analyze_whales_zerion.py  apply_patches.py  blacklisted_deployers.json  blacklisted_deployers.json.example  buy.py  buy.py.bak.20260120_105235  check_whales_activity.py  cleanup_dust.py  cleanup_snipers.sh  comand.txt  deploy.sh  emergency_sell.py  (+36 more)
bots/: bags-example.yaml  bot-sniper-0-bags.yaml  bot-sniper-0-bonkfun.yaml  bot-sniper-0-pump.yaml  bot-volume-sniper.yaml  bot-whale-copy.example.yaml  bot-whale-copy.yaml  bot-whale-copy.yaml.disabled
commands/: README.md  backup.sh  bot-sell.sh  bot-start.sh  bot-status.sh  bot-stop.sh  check-metrics.sh  cleanup_positions.py  install-deps.sh  run-tests.sh  smoke-test.sh  systemd-control.sh
data/: creator_cache.db  purchased_tokens_history.json
docs/: HELIUS_WEBHOOKS.md
final_fixes/: stop_loss_monitor.py
idl/: bags.json
learning-examples/: analyze_pump_tokens.py  analyze_token_signals.py  check_rpc_config.py  check_token_before_buy.py  check_token_buyers.py  check_whale_activity.py  debug_pumpportal_bonk.py  debug_pumpportal_pools.py  find_smart_wallets.py  find_whale_for_tokens.py  test_bonk_listener.py  test_bonk_logs_listener.py  test_pump_patterns.py  test_rpc_manager.py  test_token_scorer.py  test_volume_pattern_analyzer.py
scripts/: blacklist_cli.py  (+9 more)
(+260 files in other folders)
